# ralph-loop

./: .gitignore  CLAUDE.md  LOOP-PROMPT.md  Makefile  README.md  TASKS.md  TODO.md  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md  design-decisions.md  testing.md
scripts/: test-pypi-install.sh  test-pypi-quick.sh
specs/: clean-command.md  git-safety.md  learning-security.md  prd-workflow.md  upgrade-command.md
src/ralph_loop/: __init__.py  __main__.py  agents.py  agents_claude.py  agents_codex.py  agents_gemini.py  cli.py  config.py
src/wiggum/: __init__.py  agents.py  agents_claude.py  agents_codex.py  agents_gemini.py  changelog.py  cli.py  config.py  git.py  learning.py  parsing.py  runner.py  tasks.py  upgrade.py
templates/: LOOP-PROMPT.md  META-PROMPT.md
tests/: __init__.py  test_add_command.py  test_changelog_command.py  test_clean_command.py  test_git.py  test_git_workflow.py  test_learning.py  test_list_command.py  test_loop_config.py  test_module_structure.py  test_output_config.py  test_prune_command.py  test_readme_accuracy.py  test_runner_planning.py  test_stop_conditions.py  test_suggest_command.py  test_upgrade_command.py
tests/agents/: __init__.py  test_agent_protocol.py  test_agents.py  test_claude_agent.py  test_cli_uses_agent.py  test_codex_agent.py  test_gemini_agent.py
tests/config/: test_agent_config.py  test_config.py  test_loop_config.py  test_pypi_metadata.py  test_session_config.py
tests/init/: test_agent_agnostic_templates.py  test_init_default_config.py  test_init_security.py  test_init_update_tasks.py  (+3 more)
(+17 files in other folders)
