[project]
name = "ralph-loop"
version = "0.1.0"
description = "Ralph Wiggum loop for agents - run agent loops with guardrails"
readme = "README.md"
authors = [
    { name = "YY Ahn", email = "yongyeol@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.scripts]
ralph-loop = "ralph_loop.cli:app"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
